--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,18 +1,21 @@
-<style>
-    * {
-        font-family: "Droid Sans";
-    }
-</style>
 <div class="container">
     <h3>Internet Cryptography</h3>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
+        <div class="panel-heading">Cryptography Method</div>
         <div class="panel-body">
-            <button class="btn btn-default" (click)="setEncryptMethod('caeser')" [class.active]="encryptMethod === 'caeser'">Caeser Cipher</button>
-            <button class="btn btn-default" (click)="setEncryptMethod('bcrypt')" [class.active]="encryptMethod === 'bcrypt'">bcrypt</button>
-            <button class="btn btn-default" (click)="setEncryptMethod('ssl')" [class.active]="encryptMethod === 'ssl'">SSL</button>
+            <button class="btn btn-default" (click)="encryptMethod = 'caesar'" [class.active]="encryptMethod === 'caesar'">Caesar Cipher</button>
+            <button class="btn btn-default" (click)="encryptMethod = 'bcrypt'" [class.active]="encryptMethod === 'bcrypt'">bcrypt</button>
+            <button class="btn btn-default" (click)="encryptMethod = 'ssl'" [class.active]="encryptMethod === 'ssl'">SSL</button>
+            
+            <app-caesar *ngIf="encryptMethod === 'caesar'"></app-caesar>
+
+            <app-bcrypt *ngIf="encryptMethod === 'bcrypt'" (output)="onOutput($event)"></app-bcrypt>
+
+            <app-ssl *ngIf="encryptMethod === 'ssl'"></app-ssl>
+
         </div>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
         <div class="panel-body">
             <input type="text" placeholder="Secret message" #input>
             <button class="btn btn-primary" (click)="onClickEncrypt($event)">Encrypt!</button>
@@ -20,7 +23,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
+    <div class="panel panel-info">
         <div class="panel-heading">Output</div>
         <div class="panel-body">
             <p *ngFor="let hash of hashes"><code>{{ hash }}</code></p>
